<resources>
    <string name="app_name"  translatable="false">TouchGrand</string>
    <string name="title_setup"  translatable="false">Setup</string>
    <string name="msg_token_fmt"  translatable="false">Setup</string>
    <string name="device">Device</string>
    <string name="device_id">ID: </string>
    <string name="device_name">	Location : </string>
    <string name="onload_status">Status : </string>
    <string name="wifi_strength">WiFi Power : </string>
    <string name="battery_strength">Battery : </string>
    <string name="youtube_text"> Youtube Help </string>
    <string name="whatalert"> Alerts On Whatsapp </string>
    <string name="whatsnumber"> Whatsapp Number: 98458xxxxx  </string>
    <string name="whatstitle"> Whatsapp Alerts  </string>
    <string name="sendalerts"> Send Whatsapp Alerts  </string>
    <string name="stopalerts"> Stop Whatsapp Alerts  </string>
    <string name="alertnote"> Note: Premium Service. Available on Request.  </string>
    <string name="alertvalidity"> Note: Valid for one day.Admin Managed   </string>
    <string name="motion_sensor">Motion Sensor</string>
    <string name="led">	Led</string>
    <string name="light_1">	Light</string>
    <string name="light_2">	Plug</string>
    <string name="light_3">	Siren</string>
    <string name="settings">	Setup</string>
    <string name="alerts">	Alerts</string>
    <string name="device_status">Smart Device Status</string>
    <string name="lowbattery_alert">Low Battery in Onlook </string>
    <string name="title_light_one">	HOME LIGHT</string>
    <string name="light_control">	Light Control</string>
    <string name="light_status">	Light Is</string>
    <string name="light_activate">	Activate</string>
    <string name="light_deactivate">	Deactivate</string>
    <string name="light_offtime">	Off Time</string>
    <string name="light_ontime">	On Time</string>
    <string name="light_remote_timer1running">Timer 1-Started</string>
    <string name="light_remote_timer1stopped">Timer 1-Stopped</string>
    <string name="light_remote_timer2running">Timer 2-Started</string>
    <string name="light_remote_timer2stopped">Timer 2-Stopped</string>
    <string name="light_on">	ON</string>
    <string name="light_off">	OFF</string>
    <string name="device_offline">	Status: Device Offline</string>
    <string name="select_time">	Select Time</string>
    <string name="valid_on_time">	Select LIGHT ON TIME</string>
    <string name="valid_off_time">	Select LIGHT OFF TIME</string>
    <string name="message_device_offline">	Your Device is Offline, Please Try Again Later.</string>
    <string name="title_others">More</string>
    <string name="title_add_device">Device</string>
    <string name="title_home">Home</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="status_updated_successfully">Status Updated Successfully!</string>
    <string name="status_website">	Website Not reachable, Please check internet</string>
    <string name="no_internet">Not found Internet connection,\nPlease Turn On Internet Connection</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_setting">Check Internet</string>
    <string name="title_emergency_number">Emergency Phone Number</string>
    <string name="title_alarm">Mobile Alarm</string>
    <string name="mobile_noti">Notification Settings</string>
    <string name="title_change_user_password">Change User Password</string>
    <string name="share_my_app">Share My App</string>
    <string name="share_my_dev">Share My Device</string>
    <string name="stop_share">Stop Share</string>
    <string name="share_mobile">Receiver Mobile Number</string>
    <string name="share_stop">Status :  Device Sharing stopped</string>
    <string name="share_start">Status : Device Sharing Started</string>
    <string name="share_note">Note: You can share device to other person for one day.Share device details of login and password by clicking share icon.</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_message">If you are enjoying our app, please take a moment to rate it on PlayStore. Thanks for your support!</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">Remind me later</string>
    <string name="rate_btn_nut">No, Thanks</string>
    <string name="family_login">Onlook Family Login</string>
    <string name="title_download_reports">Download Reports</string>
    <string name="buzz">Notification Test</string>
    <string name="language">Language/ক/అ/आ/ಎ/அ/എ/ગુ/म</string>
    <string name="siren">Buzzer Alert Setup</string>
    <string name="vibratehead">Vibration Sensor Control</string>
    <string name="vibrate">Vibration Alert Setup</string>
    <string name="vibrate_activate">Activate Vibration </string>
    <string name="vibrate_setup">Activate Setup </string>
    <string name="help">Onlook Help</string>
    <string name="offers">Offers And Notifications For Me</string>
    <string name="logout">Logout</string>
    <string name="addcust">Add Customer</string>
    <string name="webcust">View Customers</string>
    <string name="user_account">Change User Password</string>
    <string name="change_password">Change Password</string>
    <string name="alert_ops_login">Alerts Operator Login</string>
    <string name="light_ops_login">Light Operator Login</string>
    <string name="family_light_loginpass">Password : </string>
    <string name="family_member_email">Family Member Email or Mobile</string>
    <string name="create_member">Create Member</string>
    <string name="family_member_note">Note: Only one family member and only one time you can add a member. Additional member can be added by Email request only in Pro mode</string>
    <string name="family_login_note"> Note: Ask your family member to download and login with this password to control only light</string>
    <string name="family_member_light_login">Login : member@onlook.in</string>
    <string name="family_member_status">Status :</string>
    <string name="family_member_status_info">Family member is added</string>
    <string name="hint_emergency_number">98xxx-xxxxx</string>
    <string name="button_edit">Edit Number</string>
    <string name="button_call_now">Call Now</string>
    <string name="button_save_now">Save Number </string>
    <string name="title_confirm_download_report">Confirm Download Report</string>
    <string name="dialog_message">Do You Want To Send Email and Download Reports</string>
    <string name="button_yes">	Yes</string>
    <string name="button_no">No</string>
    <string name="not_ebable">Not Enabled For This User</string>
    <string name="buzzer">Buzzer</string>
    <string name="buzzer_control">Buzzer Alert Setup</string>
    <string name="buzzer_status">Buzzer Is</string>
    <string name="buzzer_on">	ON</string>
    <string name="buzzer_off">	OFF</string>
    <string name="logout_title">Confirm Logout</string>
    <string name="logout_message">Are You Sure You Want To Logout?</string>
    <string name="high" translatable="false">High</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="low" translatable="false">Low</string>
    <string name="language_heading">	Choose Your Preferred language</string>
    <string name="language_english" translatable="false">English</string>
    <string name="selected_language">English</string>
    <string name="selected_language_head">English</string>
    <string name="continue_language">	Continue With English</string>
    <string name="contact_language_error_head">	Language Support-version-012</string>
    <string name="contact_language_support">In case you find language issue and wrong meaning please inform us.Translation are for app usage purpose only.\n\n Status: Development in Progress
</string>
    <string name="motion_activate">	Activate</string>
    <string name="motion_deactivate">	Deactivate</string>
    <string name="sensor_timer">Motion Sensor Timer</string>
    <string name="motion_offtime">	Off Time</string>
    <string name="motion_ontime">	On Time</string>
    <string name="timer_running">	Sensor Running</string>
    <string name="timer_stopped">	Sensor Stopped</string>
    <string name="timer_always">	Alerts All Day</string>
    <string name="timer_or">	---OR---</string>
    <string name="motion_set_info">	1) Deactivate sensor to stop all sensor alerts. \n2) To change alerts receving time slot , click "DEACTIVATE", uncheck checkbox "Alerts ALL Day", now change on time and off time and click "ACTIVATE". \n3) To get "Alerts All Day", deactivate sensor and select checkbox "ALerts All Day" and click "ACTIVATE" button.</string>
    <string name="motion_alerttype">	Alert Type</string>
    <string name="motion_notiemail">	Notification Email</string>
    <string name="motion_allow_email">	Allow Email Notification</string>
    <string name="motion_notitone">	Notification Tone</string>
    <string name="motion_ringtone">	Ring Tone</string>
    <string name="motion_mob_noti">	Mobile Notification</string>
    <string name="motion_auto_time">	Auto Light</string>
    <string name="motion_auto_buzz">	Auto Buzzer</string>
    <string name="auto_note" translatable="false"> </string>
    <string name="fire_alt"> Fire Alert(Test Mode) </string>
    <string name="motion_pow_alt">	Power Alert</string>
    <string name="motion_mot_alt">	Fire Alert</string>
    <string name="motion_vib_alt">	Vibration Alert</string>
    <string name="vibration">Vibration</string>
    <string name="motion_email_noti">Allow Email Notifications</string>
    <string name="motion_magic">	Magic</string>
    <string name="motion_fire">	Fire</string>
    <string name="motion_night">	Night</string>
    <string name="motion_forest">	Forest</string>
    <string name="motion_phoneringer">	Phone Ringer</string>
    <string name="motion_jazz">	Jazz</string>
    <string name="motion_wakeup">	Wake Up</string>
    <string name="motion_long_night">	Long Night</string>
    <string name="motion_blockall">	Block All Notification</string>
    <string name="motion_sil_alert">	Silent Alert</string>
    <string name="motion_noti_alert">	Notification Alert</string>
    <string name="motion_ringer_alert">	Ringer Alert</string>
    <string name="motion_vibration_alertnoti">	Vibration Alert</string>
    <string name="motion_autolight">	Auto Light</string>
    <string name="motion_dect_autolight_head">	Motion Detected Auto light</string>
    <string name="motion_dect_autolight_subhead">	Light Will Be On For</string>
    <string name="motion_autobuzzer">	Auto Buzzer</string>
    <string name="motion_dect_autobuzz_head">Motion Detected Auto Buzzer</string>
    <string name="motion_dect_autobuzz_subhead">	Buzzer Will Be On For</string>
    <string name="fire_dect_autobuzz_head">	Auto Fire Alarm</string>
    <string name="fire_dect_autobuzz_subhead">	Alarm Will Be On For</string>
    <string name="motion_autoled">	Auto LED</string>
    <string name="motion_dect_autoled_head">Motion Detected Auto LED</string>
    <string name="motion_dect_autoled_subhead">	LED Will Be On For</string>
    <string name="title_led">MULTI COLOR LED</string>
    <string name="led_control">	LED CONTROL</string>
    <string name="hint_user_email">User Email or Mobile</string>
    <string name="password">Password</string>
    <string name="login">Signin</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don`t Have An Account?</string>
    <string name="email" translatable="false">Email</string>
    <string name="wifi_planned_desc">Click To Complete Setup </string>
    <string name="forgot_password_head">Forgot Password</string>
    <string name="forgot_password_text">Enter your email address here \nto receive further instructions.</string>
    <string name="button_recover_my_account">Continue</string>
</resources>