<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="bizmessage.in.touchswitch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_device"
        android:name="bizmessage.in.touchswitch.ui.adddevice.AddDeviceFragment"
        android:label="@string/title_add_device"
        tools:layout="@layout/fragment_add_device" />

    <!--<fragment
        android:id="@+id/navigation_settings"
        android:name="com.onlook.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />-->

    <fragment
        android:id="@+id/navigation_other"
        android:name="bizmessage.in.touchswitch.ui.others.OthersFragment"
        android:label="@string/title_others"
        tools:layout="@layout/fragment_others" />
</navigation>