<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/ll_signUp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/logo100" />

                <LinearLayout
                    android:id="@+id/lnrLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_email"
                        style="@style/hintTextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_email"
                            style="@style/editTextViewStyle"
                            android:drawableStart="@drawable/ic_email"
                            android:hint="@string/hint_user_email"
                            android:drawablePadding="@dimen/_5sdp"
                            android:imeOptions="actionNext"
                            android:textCursorDrawable="@drawable/color_cursor"
                            android:inputType="text"
                            android:paddingTop="@dimen/_4sdp"
                            android:textColor="@color/black"
                            android:paddingBottom="@dimen/_6sdp"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:layout_marginTop="@dimen/_18sdp">

                        <EditText
                            android:id="@+id/edt_password"
                            style="@style/editTextViewStyle"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:drawableStart="@drawable/ic_new_password"
                            android:hint="@string/password"
                            android:textCursorDrawable="@drawable/color_cursor"
                            android:drawablePadding="@dimen/_5sdp"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingBottom="@dimen/_6sdp"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_horizontal"
                       android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:padding="@dimen/_12sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:background="@drawable/shape"
                         android:text="@string/login"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:gravity="end"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/amber"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/ll_signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/transparent1"
            android:gravity="center"
            android:padding="@dimen/_6sdp">

            <TextView
                android:id="@+id/txtDontAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/txtDontAccount"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/amber"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/txtDontAccount" />

        </RelativeLayout>

    </RelativeLayout>

</layout>