<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/textforgotpass_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/forgot_password_head"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_14ssp"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlTop"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo100" />

            <TextView
                android:id="@+id/textforgotpass_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">
                <EditText
                    android:id="@+id/edt_email"
                    style="@style/editTextViewStyle"
                    android:drawableStart="@drawable/ic_new_user"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/email"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:imeOptions="actionNext"


                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:maxLength="200"
                    android:maxLines="1"
                    android:paddingTop="@dimen/_10sdp"

                    android:paddingBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_12ssp" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnForgot"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:minWidth="@dimen/_250sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/button_recover_my_account"
                 android:textSize="@dimen/_10ssp"

                android:background="@drawable/shape"
                android:textColor="@android:color/white" />



            <ImageView
                android:id="@+id/imgWhatsApp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_60sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_50sdp"


                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:tooltipText="Contact"
                android:src="@drawable/whatshelp"/>






        </LinearLayout>



    </RelativeLayout>

</layout>