<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/transparent1"
        android:layout_height="@dimen/_140sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_top_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_2sdp"

            app:cardMaxElevation="@dimen/_3sdp"



            android:foreground="?android:attr/selectableItemBackground"

            android:elevation="@dimen/_2sdp"


            app:cardBackgroundColor="@color/cbg3"



            app:layout_constraintStart_toStartOf="parent"



            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                >

                <ImageView
                    android:id="@+id/imgDevice"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_device_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/device_id"

                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_device_id_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="17dp"
                    android:gravity="start"
                    android:text="@string/device_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/text_device_id"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView

                    android:id="@+id/text_device_name"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"
                    android:text="@string/device_name"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_id" />


                <TextView
                    android:id="@+id/text_device_name_info"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_device_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_id"



                    />

                <TextView
                    android:id="@+id/text_device_status"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"
                    android:text="@string/onload_status"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"

                    app:layout_constraintTop_toBottomOf="@+id/text_device_name" />


                <TextView
                    android:id="@+id/text_device_status_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_name_info"
                    app:layout_constraintStart_toEndOf="@+id/text_device_status" />




                <TextView
                    android:id="@+id/text_device_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:text="@string/wifi_strength"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_status" />

                <TextView
                    android:id="@+id/text_device_power_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    app:layout_constraintTop_toBottomOf="@+id/text_device_status_info"
                    app:layout_constraintStart_toEndOf="@+id/text_device_power" />



                <TextView
                    android:id="@+id/text_bat_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:text="@string/wifi_strength"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_power" />

                <TextView
                    android:id="@+id/text_bat_power_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="start"
                    android:text=""
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    app:layout_constraintTop_toBottomOf="@+id/text_device_power_info"
                    app:layout_constraintStart_toEndOf="@+id/text_bat_power" />


                <Button
                    android:id="@+id/btn_setup"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:gravity="center_horizontal"

                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/wifi_planned_desc"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imgDevice"
                    app:layout_constraintTop_toBottomOf="@+id/text_device_power" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>







    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>